# ayaram-prototype

./: .gitignore  LICENSE  README.md  pyproject.toml
ayaram/: __init__.py  cargo.py  core.py  encoding.py  ising.py  learning.py  memory.py  modes.py  scalespace.py
data/: generate_kanji.py  generate_kanji_v15.py  generate_kanji_v2.py  kanji_12_32x32_v15.npy  kanji_8_32x32.npy  kanji_8_32x32_v2.npy  kanji_hierarchy.py  kanji_hierarchy_v15.py
data/glyphs_128/: glyphs_128.npz  metadata.json
demos/: __init__.py  attention_test.py  hierarchical_kanji.py  hierarchical_kanji_v15.py  ising_solver.py  kanji_memory.py  regenerate_m5_materials.py  reverse_recall.py  thermal_sweep.py
demos/output/: beta_sigma_map.npz
docs/: cycle_concept.py  design_decisions.md  stats.md
results/m5_materials/: README.md  regen_report.json
results/v0.2_m1/: metadata.json  trajectory_summary.csv
results/v0.2_m1b/: metadata.json
results/v0.2_m2/: blob_maps.npz  merge_trees.json  metadata.json
results/v0.2_m3/: metadata.json
results/v0.2_m4/: W_series.npz  metadata.json
scripts/: generate_v15_cosine_fixture.py  render_glyphs_128.py  run_m1_heat_dissolution.py  run_m1b_analysis.py  run_m2_cargo.py  run_m3_replay.py  run_m4_temperature.py
tests/: test_cargo.py  test_core.py  test_encoding_v15.py  test_hierarchical.py  test_ising.py  test_learn_centering.py  test_learn_spectral.py  test_learning.py  test_memory.py  test_modes.py  test_scalespace.py  test_smoke.py  test_v015_compat.py  test_v015_thermal.py  test_v02_regression.py
tests/fixtures/: v15_modern_seed0_cosine.pt
